--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <style>
             .price {
                 min-width:25px;
-                max-width:40px;
+                max-width:40px;				
             }
             .quantity {
                 min-width:25px;
@@ -40,6 +40,7 @@
             }
             a {
                 color: #633100;
+				margin-left: 5px;
             }
             a:visited {
                 color: #633100;
@@ -159,129 +160,97 @@
             }];
 
 
-
-
-            var hourlyPay = 0;
-            var yearlyPayInThousands = 0;
-            var totalExpenses = 0;
-            var totalPay = 0;
-            var takeHome = 0;
-            fuelExpense = 0;
-            leaseExpense = 0;
-            maintenanceExpense = 0;
-            insuranceExpense = 0;
-            feeExpense = 0;
-            var expenseCategoryChartData = [
-                ['Category', 'Count'],
-                ['Take Home', takeHome],
-                ['Lease & Rent', leaseExpense],
-                ['Maintenance', maintenanceExpense],
-                ['Fuel', fuelExpense],
-                ['Insurance', insuranceExpense],
-                ['Fees and Fines', feeExpense]
+var hourlyPay = 0;
+var yearlyPayInThousands = 0;
+var totalExpenses = 0;
+var totalPay = 0;
+var takeHome = 0; fuelExpense = 0; leaseExpense = 0; maintenanceExpense = 0; insuranceExpense = 0; feeExpense = 0;
+var expenseCategoryChartData = [
+              ['Category', 'Count'],
+              ['Take Home', takeHome],
+			  ['Lease and Rent', leaseExpense],
+              ['Maintenance', maintenanceExpense],
+              ['Fuel', fuelExpense],
+			  ['Insurance', insuranceExpense],
+			  ['Fees and Fines', feeExpense]
             ];
-            google.load("visualization", "1", {
-                packages: ["corechart"]
-            });
-            google.setOnLoadCallback(drawCategoryChart);
+google.load("visualization", "1", { packages: ["corechart"] });
+google.setOnLoadCallback(drawCategoryChart);
 
-            function drawCategoryChart() {
-                var pieData = google.visualization.arrayToDataTable(expenseCategoryChartData);
-                var pieOptions = {
-                    backgroundColor: "#BE6527", //Note: set to match page css
-                    // original chartArea: {left:"10%",top:"5%",  width:"70%",height:"25%"},  
-                    chartArea: {
-                        left: "10%",
-                        top: "5%",
-                        width: "70%",
-                        height: "40%"
-                    },
-                    legend: {
-                        position: 'left'
-                    },
-                    slices: [{
-                        color: '#168E10',
-                        offset: 0.2
-                    }, {
-                        color: '#C5161F'
-                    }, {
-                        color: '#FFA500'
-                    }, {
-                        color: '#499DDA'
-                    }, {
-                        color: '#88108E'
-                    }, {
-                        color: '#10558E'
-                    }] //Note: set to match page color scheme
-                };
-                var pieChart = new google.visualization.PieChart(document.getElementById('chartCategories'));
-				pieOptions.backgroundColor = $('.container').css('backgroundColor'); 
-                pieChart.draw(pieData, pieOptions);
-            }
+function drawCategoryChart() {
+	var pieData = google.visualization.arrayToDataTable(expenseCategoryChartData);
+	var pieOptions = {
+				backgroundColor: "#BE6527", //Note: set to match page css
+				// original chartArea: {left:"10%",top:"5%",  width:"70%",height:"25%"},  
+				chartArea: {left:"10%",top:"5%",  width:"70%",height:"40%"},  
+				legend: {position: 'left'},
+                slices: [ {color: '#168E10', offset: 0.2 },{color: '#C5161F'},{color: '#FFA500'},{color: '#499DDA'},{color: '#88108E'},{color: '#10558E'}] //Note: set to match page color scheme
+            };
+	var pieChart = new google.visualization.PieChart(document.getElementById('chartCategories'));
+	pieChart.draw(pieData, pieOptions);
+}
 
-            // Load the Visualization API and the guage package.
-            google.load('visualization', '1.0', {
-                'packages': ['gauge']
-            });
+// Load the Visualization API and the guage package.
+google.load('visualization', '1.0', {'packages':['gauge']});
+ 
+// Set a callback to run when the Google Visualization API is loaded.
+google.setOnLoadCallback(drawHourlyWageChart);
+ 
+// Callback that creates and populates a data table,
+// instantiates the pie chart, passes in the data and
+// draws it.
+function drawHourlyWageChart () {
+	if (hourlyPay > 0) {
+		hourlyPay = roundToTwo(hourlyPay);
+	}
+	
+    var data = google.visualization.arrayToDataTable([
+        ['Label', 'Value'],
+        ['Hour', hourlyPay]
+    ]);
 
-            // Set a callback to run when the Google Visualization API is loaded.
-            google.setOnLoadCallback(drawHourlyWageChart);
+    var options = {
+		max: 32,
+        redFrom: 0,
+        redTo: 8,
+        yellowFrom:8,
+        yellowTo: 25,
+        greenFrom: 25,
+        greenTo: 32,
+		minorTicks: 4,
+        majorTicks: ["0","8","16","24","32"]
+    };
 
-            // Callback that creates and populates a data table,
-            // instantiates the pie chart, passes in the data and
-            // draws it.
-            function drawHourlyWageChart() {
-                if (hourlyPay > 0) {
-                    hourlyPay = roundToTwo(hourlyPay);
-                }
+	var chart = new google.visualization.Gauge(document.getElementById('chartHourlyWage'));
+	chart.draw(data, options);
+}
 
-                var data = google.visualization.arrayToDataTable([
-                    ['Label', 'Value'],
-                    ['Hour', hourlyPay]
-                ]);
+google.setOnLoadCallback(drawYearlyTakeHomeChart);
+ 
+// Callback that creates and populates a data table,
+// instantiates the pie chart, passes in the data and
+// draws it.
+function drawYearlyTakeHomeChart () {
+    var data = google.visualization.arrayToDataTable([
+        ['Label', 'Value'],
+        ['Year', yearlyPayInThousands]
+    ]);
 
-                var options = {
-                    max: 32,
-                    redFrom: 0,
-                    redTo: 8,
-                    yellowFrom: 8,
-                    yellowTo: 25,
-                    greenFrom: 25,
-                    greenTo: 32,
-                    minorTicks: 4,
-                    majorTicks: ["0", "8", "16", "24", "32"]
-                };
+var options = {
+		max: 80,
+        redFrom: 0,
+        redTo: 17,
+        yellowFrom:17,
+        yellowTo: 52,
+        greenFrom: 52,
+        greenTo: 80,
+		minorTicks: 10,
+        majorTicks: ["0","20","40","60","80"]
+    };
 
-                var chart = new google.visualization.Gauge(document.getElementById('chartHourlyWage'));
-                chart.draw(data, options);
-            }
-
-            google.setOnLoadCallback(drawYearlyTakeHomeChart);
-
-            // Callback that creates and populates a data table,
-            // instantiates the pie chart, passes in the data and
-            // draws it.
-            function drawYearlyTakeHomeChart() {
-                var data = google.visualization.arrayToDataTable([
-                    ['Label', 'Value'],
-                    ['Year', yearlyPayInThousands]
-                ]);
-
-                var options = {
-                    max: 80,
-                    redFrom: 0,
-                    redTo: 17,
-                    yellowFrom: 17,
-                    yellowTo: 52,
-                    greenFrom: 52,
-                    greenTo: 80,
-                    minorTicks: 10,
-                    majorTicks: ["0", "20", "40", "60", "80"]
-                };
-
-                var chart = new google.visualization.Gauge(document.getElementById('chartYearlyTakeHome'));
-                chart.draw(data, options);
-            }
+    var chart = new google.visualization.Gauge(document.getElementById('chartYearlyTakeHome'));
+    chart.draw(data, options);
+}
         </script>
     </head>
     
@@ -298,7 +267,7 @@
 									</div>
 								</tr>
 								<tr width='60%'>
-                                    <table width='100%' border="1">
+                                    <table width='100%' >
                                         <thead>
                                            <tr>
                                                 <div class="col-md-1">
@@ -339,7 +308,7 @@
 									</div>
 								</tr>
 								<tr>
-									<table  width='100%' border="1" >
+									<table  width='100%'  >
 										<thead>
 											<tr>
 												<div class="col-md-1">
@@ -406,7 +375,7 @@
 									</div>
 								</tr>
 								<tr width='40%'>
-									<table width='100%' border="1">
+									<table width='100%' >
 										<thead>									
 											<tr>
 												<th></th>
@@ -453,7 +422,7 @@
                         <div id="chartYearlyTakeHome" style="width:100%; height:50%"></div>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                        <div id="chartCategories" class="chartCategories" style="width:100%; height:50%"></div>
+                        <div id="chartCategories" style="width:100%; height:50%"></div>
                     </div>
                     <div class="col-xs-12 col-md-3">
                         <div id="chartHourlyWage" class="chartHourlyWage" style="width:100%; height:50%"></div>
