--- a/Index.html
+++ b/Index.html
@@ -231,6 +231,10 @@ google.setOnLoadCallback(drawYearlyTakeHomeChart);
 // instantiates the pie chart, passes in the data and
 // draws it.
 function drawYearlyTakeHomeChart () {
+	if (yearlyPayInThousands > 0) {
+		yearlyPayInThousands = parseFloat(yearlyPayInThousands.toFixed(1));
+	}
+
     var data = google.visualization.arrayToDataTable([
         ['Label', 'Value'],
         ['Year', yearlyPayInThousands]
@@ -270,34 +274,22 @@ var options = {
                                     <table width='100%' >
                                         <thead>
                                            <tr>
-                                                <div class="col-md-1">
-                                                    <th class='price'>Paid</th>
-                                                </div>
-                                                <div class="col-md-1">
-                                                    <th class='quantity'>Hours</th>
-                                                </div>
-                                                <div class="col-md-1">
+                                                <th class='price'><span style='margin-left:10px;'>Paid</span></th>
+                                                    <th class='quantity'><span style='margin-left:20px;'>Hours</span></th>
                                                     <th class='price text-right'>Per Hour</th>
-                                                </div>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <div class="col-md-1">
                                                     <td class='price'>
-                                                        <input data-bind="value: amountPaid" class="form-control" />
+                                                        <input data-bind="value: amountPaid" class="form-control"  />
                                                     </td>
-                                                </div>
-                                                <div class="col-md-1">
                                                     <td class='quantity'>
-                                                        <input data-bind="value: hoursWorked" class="form-control" />
+                                                        <input data-bind="value: hoursWorked" class="form-control" style='margin-left:10px;' />
                                                     </td>
-                                                </div>
-                                                <div class="col-md-1">
                                                     <td class='price text-right'>
                                                         <label data-bind="text: formatCurrency(grossPerHour())"></label>
                                                     </td>
-                                                </div>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -313,24 +305,24 @@ var options = {
 										<tbody data-bind='foreach: expenseItemLines' >
 											<tr>
 												<td class='text-left vtop'>
-													<span style='display:inline-block;' >Category<div></div>
+													<span style='display:inline-block;' ><span style='margin-left:10px;'>Category</span><div></div>
 														<select  data-bind="options: expenseCategories, optionsText: 'name', optionsCaption: 'Select...', value: expenseCategory"></select>
 													</span>
 													<div style='display:inline-block;' data-bind="with: expenseCategory">
-														<span style='display:inline-block;' >Item<div></div>
+														<span style='display:inline-block;' ><span style='margin-left:10px;'>Item</span><div></div>
 															<select data-bind="options: expenseSubCategories, optionsText: 'name', optionsCaption: 'Select...', value: $parent.expenseSubCategory "></select>
 														</span>
 													</div>
 												</td>
 												<td class='text-left vtop'>
-													<span style='display:inline-block;' >Cost<input style='display:inline-block;' data-bind="value: expenseAmount" class="form-control" /></span>
-													<span style='display:inline-block;' >Period<div></div><select  data-bind="options: expensePeriods, optionsText: 'expensePeriodName', value: expensePeriod" ></select></span>
+													<span style='display:inline-block; margin-left:5px;' ><span style='margin-left:10px;'>Cost</span><input style='display:inline-block;' data-bind="value: expenseAmount" class="form-control" /></span>
+													<span style='display:inline-block;margin-left:5px;' ><span style='margin-left:10px;'>Period</span><div></div><select  data-bind="options: expensePeriods, optionsText: 'expensePeriodName', value: expensePeriod" ></select></span>
 												</td>	
 												<td class='text-left vtop'>
 													<br/>
 													<span style='display:inline-block;' ></span>
-													<span style='display:inline-block;'data-bind="text: formatCurrency(expenseSubtotal())" ></span>
-													<span style='display:inline-block; margin-left:5px;  ><a  href='#' data-bind='click: removeExpenseLine'>Remove</a></span>
+													<span style='display:inline-block; margin-left:5px;'data-bind="text: formatCurrency(expenseSubtotal())" ></span>
+													<span style='display:inline-block; margin-left:5px;'  ><a  href='#' data-bind='click: removeExpenseLine'>Remove</a></span>
 												</td>	
 											</tr>
 										</tbody>
@@ -339,27 +331,24 @@ var options = {
 								<tr>
 									<td>
 										<div class='text-right'>
-											<button class='btn-custom btn' data-bind='click: addExpenseLine'>Add Expense</button>
+											<button class='btn-custom btn' data-bind='click: addExpenseLine'>Add New</button>
 											<br/>
 										</div>
 									</td>
 								</tr>
 								<tr>
-								<tr>
-<td>
-		<table width='30%'>
-		<tbody>
-            <tr>
-    <h4 class='grandTotal text-right' >
-        Weekly Expenses: <span data-bind='text: formatCurrency(grandTotal())'></span>
-    </h4><br/>
-            </tr>
-		</tbody>
-		</table>
-
-</td>
-</tr>
-
+									<td>
+										<table width='30%'>
+											<tbody>
+            									<tr>
+													<h4 class='grandTotal text-right' >
+														Weekly Expenses: <span data-bind='text: formatCurrency(grandTotal())'></span>
+													</h4>
+													<br/>
+            									</tr>
+											</tbody>
+										</table>
+									</td>
 								</tr>
 								<tr>
 									<div class="col-md-6">
@@ -410,14 +399,14 @@ var options = {
                     </form>
                 </div>
                 <div class="row">
+                    <div class="col-xs-12 col-md-3 ">
+                        <div id="chartYearlyTakeHome" class='text-right' style="width:80%; height:50% "></div>
+                    </div>
                     <div class="col-xs-12 col-md-3">
-                        <div id="chartYearlyTakeHome" style="width:80%; height:33%"></div>
+                        <div id="chartHourlyWage" class="chartHourlyWage" style="width:80%; height:50%"></div>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                        <div id="chartCategories" style="width:100%; height:40% "></div>
-                    </div>
-                    <div class="col-xs-12 col-md-3">
-                        <div id="chartHourlyWage" class="chartHourlyWage" style="width:80%; height:33%"></div>
+                        <div id="chartCategories" style="width:100%; height:80% "></div>
                     </div>
                 </div>
             </div>
@@ -464,7 +453,7 @@ var options = {
                 self.grandTotal = ko.computed(function() {
                     resetExpenseCategoryTotals();
                     var total = 0;
-                    //var rowCounter = 0;
+
                     $.each(self.expenseItemLines(), function() {
                         if (this.expenseCategory() != null) {
                             //rowCounter++;
@@ -578,7 +567,8 @@ var options = {
             function formatCurrency(value) {
                 return "$" + value.toFixed(2);
             }
-
+			
+			
             function redrawCharts() {
                 drawCategoryChart();
                 drawHourlyWageChart();
