--- a/Index.html
+++ b/Index.html
@@ -260,7 +260,7 @@ var options = {
     
     <body>
         <div class='liveExample'>
-            <div class="container" style="margin-left:5px; margin-right:5px;">
+            <div class="container" style="margin-left:6px; margin-right:6px;">
 				<div class="row">
 					<form role="form">
                         <fieldset>
@@ -270,23 +270,23 @@ var options = {
 											<td><h3>Weekly Pay</h3></td>
 									</div>
 								</tr>
-								<tr width='60%'>
+								<tr >
                                     <td>
-										<table width='100%' >
+										<table width='100%'  >
 											<thead>
 												<tr>
-													<th class='price'><span style='margin-left:10px;'>Paid</span></th>
-                                                    <th class='quantity'><span style='margin-left:20px;'>Hours</span></th>
-                                                    <th class='price text-right'>Per Hour</th>
+													<th class='price' ><span style='margin-left:10px; '>Paid</span></th>
+                                                    <th class='quantity' ><span style='margin-left:20px; '>Hours</span></th>
+                                                    <th class='price text-right' >Per Hour</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-                                                    <td class='price'>
-                                                        <input data-bind="value: amountPaid" class="form-control" style='min-width:80px; max-width:100px;' />
+                                                    <td class='price' >
+                                                        <input data-bind="value: amountPaid" class="form-control" style='min-width:80px; max-width:100px; ' />
                                                     </td>
                                                     <td class='quantity'>
-                                                        <input data-bind="value: hoursWorked" class="form-control" style='margin-left:10px; min-width:80px; max-width:100px;' />
+                                                        <input data-bind="value: hoursWorked" class="form-control" style='margin-left:10px; min-width:80px; max-width:100px; ' />
                                                     </td>
                                                     <td class='price text-right'>
                                                         <label data-bind="text: formatCurrency(grossPerHour())"></label>
@@ -297,66 +297,71 @@ var options = {
 									</td>
 								</tr>
 								<tr>
-									<div class="col-md-6">
+									<div >
 											<td>
 												<h3>Expenses</h3>
 											</td>
 									</div>
 								</tr>
 								<tr>
-									<table  width='100%'  >
-										<tbody data-bind='foreach: expenseItemLines' >
-											<tr>
-												<td class='text-left vtop'>
-													<span style='display:inline-block;' ><span style='margin-left:10px;'>Category</span><div></div>
-														<select  data-bind="options: expenseCategories, optionsText: 'name', optionsCaption: 'Select...', value: expenseCategory"></select>
-													</span>
-													<div style='display:inline-block;' data-bind="with: expenseCategory">
-														<span style='display:inline-block;' ><span style='margin-left:10px;'>Item</span><div></div>
-															<select data-bind="options: expenseSubCategories, optionsText: 'name', optionsCaption: 'Select...', value: $parent.expenseSubCategory "></select>
-														</span>
-													</div>
-												</td>
-												<td class='text-left vtop'>
-													<span style='display:inline-block; margin-left:5px;' ><span style='margin-left:10px; min-width:80px; max-width:100px;'>Cost</span><div></div><input style='display:inline-block; min-width:80px; max-width:100px;' data-bind="value: expenseAmount" class="form-control" /></span>
-													<span style='display:inline-block;margin-left:5px;' ><span style='margin-left:10px;'>Period</span><div></div><select  data-bind="options: expensePeriods, optionsText: 'expensePeriodName', value: expensePeriod" ></select></span>
-												</td>	
-												<td class='text-left vtop'>
-													<br/>
-													<span style='display:inline-block;' ></span>
-													<span style='display:inline-block; margin-left:5px;'data-bind="text: formatCurrency(expenseSubtotal())" ></span>
-													<span style='display:inline-block; margin-left:5px;'  ><a  href='#' data-bind='click: removeExpenseLine'>Remove</a></span>
-												</td>	
-											</tr>
-										</tbody>
-									</table><br/>
-								</tr>
-								<tr>
 									<td>
-										<div class='text-right'>
-											<button class='btn-custom btn' data-bind='click: addExpenseLine'>Add New</button>
-											<br/>
-										</div>
+										<table    >
+											<tbody data-bind='foreach: expenseItemLines' >
+												<tr  >
+													<td class='text-left vtop' style='display:inline-block;'>
+														<span style='display:inline-block; padding-left:6px;' ><span style='margin-left:10px;'>Category</span><div></div>
+															<select  data-bind="options: expenseCategories, optionsText: 'name', optionsCaption: 'Select...', value: expenseCategory"></select>
+														</span>
+														<div style='display:inline-block;' data-bind="with: expenseCategory">
+															<span style='display:inline-block;' ><span style='margin-left:10px;'>Item</span><div></div>
+																<select data-bind="options: expenseSubCategories, optionsText: 'name', optionsCaption: 'Select...', value: $parent.expenseSubCategory "></select>
+															</span>
+														</div>
+													</td>
+													<td class='text-left vtop'>
+														<span style='display:inline-block; margin-left:5px; ' ><span style='margin-left:10px; min-width:80px; max-width:100px;'>Cost</span><div></div><input style='display:inline-block; min-width:80px; max-width:100px;' data-bind="value: expenseAmount" class="form-control" /></span>
+														<span style='display:inline-block;margin-left:5px; ' class='text-left vtop' ><span style='margin-left:10px; margin-bottom:6px;' >Period</span><div></div><select data-bind="options: expensePeriods, optionsText: 'expensePeriodName', value: expensePeriod" ></select></span>
+													</td>	
+													<td  class='text-left vtop' style=' margin-left:10px; >
+														<span style='display:inline-block;' class='text-right' >
+															<span  style='display:inline-block; margin-left:5px;' data-bind="text: formatCurrency(expenseSubtotal())" ></span>
+															<div style="height: 10px;" ></div>
+															<span style='display:inline-block; margin-left:5px;'  ><a  href='#' data-bind='click: removeExpenseLine'>Remove</a></span>
+														</span>
+													</td>	
+												</tr>
+											</tbody>
+										</table>
+										<br/>
 									</td>
 								</tr>
 								<tr>
+								</tr>
+								<tr>
 									<td>
-										<table width='30%'>
+										<table >
 											<tbody>
             									<tr>
 													<td>
 														<h4 class='grandTotal text-right' >
-															Weekly Expenses: <span data-bind='text: formatCurrency(grandTotal())'></span>
+															<span data-bind='text: formatCurrency(grandTotal())'></span> Weekly
 														</h4>
 													</td>
-													<br/>
+													<td width=30px; >
+													</td>
+													<td>
+														<div class='text-right'>
+															<button class='btn-custom btn' data-bind='click: addExpenseLine'>Add New</button>
+															<br/>
+														</div>
+													</td>
             									</tr>
 											</tbody>
 										</table>
 									</td>
 								</tr>
 								<tr>
-									<div class="col-md-6">
+									<div >
 										<td>
 											<h3>Summary</h3>
 										</td>	
@@ -364,26 +369,26 @@ var options = {
 								</tr>
 								<tr >
 									<td>
-										<table width='100%' >
+										<table  width='100%;' >
 											<thead>									
 												<tr>
-													<th></th>
-													<th class='text-right'>Gross</th>
-													<th class='text-right'>Net</th>
+													<th class='text-right' width='33%;'></th>
+													<th class='text-right' width='33%;'>Gross</th>
+													<th class='text-right' width='33%;'>Net</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td class='text-right'>Week</td>
+													<td class='text-right'><label>Week</label></td>
 													<td class='price text-right'>
 														<label data-bind="text: formatCurrency(grossThisPeriod())"></label>
 													</td>
-													<td class='price text-right'>
+													<td class='price text-right' style='margin-left:5px;' >
 														<label data-bind="text: formatCurrency(netPerPeriod())"></label>
 													</td>
 												</tr>
 												<tr>
-													<td class='text-right'>Year</td>
+													<td class='text-right'><label>Year</label></td>
 													<td class='price text-right'>
 														<label data-bind="text: formatCurrency(grossPerYear())"></label>
 													</td>
@@ -392,7 +397,7 @@ var options = {
 													</td>
 												</tr>
 												<tr>
-													<td class='text-right'>Per Hour</td>
+													<td class='text-right'><label>Per Hour</label></td>
 													<td class='price text-right'>
 														<label data-bind="text: formatCurrency(grossPerHour())"></label>
 													</td>
