--- a/Index.html
+++ b/Index.html
@@ -259,7 +259,7 @@ var options = {
     </head>
     
     <body>
-        <div class='liveExample'>
+        <div class='liveExample' align='center'>
             <div class="container" style="margin-left:6px; margin-right:6px;">
 				<div class="row">
 					<form role="form">
